# riftgate

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RUNBOOK.md  UPGRADING.md  book.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml  config.toml.example
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md
benchmarks/v0.2-headline/: README.md
config/: workspace.local.env.example
crates/: README.md
crates/riftgate/: Cargo.toml  README.md
crates/riftgate-config/: Cargo.toml  README.md
crates/riftgate-config/src/: error.rs  lib.rs  loader.rs  schema.rs  secret.rs  validate.rs
crates/riftgate-config/tests/: loader_test.rs  secret_redaction_test.rs
crates/riftgate-config/tests/fixtures/: minimal.toml
crates/riftgate-core/: Cargo.toml  README.md
crates/riftgate-core/benches/: allocator.rs  rate_limit.rs  timers.rs
crates/riftgate-core/src/: allocator.rs  backpressure.rs  cancel.rs  capability.rs  error.rs  filter.rs  gpu.rs  io.rs  lib.rs  obs.rs  parser.rs  queue.rs  rate_limit.rs  request.rs  router.rs  scheduler.rs  tenant.rs  timers.rs  types.rs  wal.rs
crates/riftgate-core/tests/: trait_object_safety.rs
crates/riftgate-core/tests/io_conformance/: mod.rs
crates/riftgate-filter/: Cargo.toml  README.md
crates/riftgate-filter/src/: chain.rs  lib.rs  wasm.rs
crates/riftgate-filter/wit/: riftgate-filter.wit
crates/riftgate-io-epoll/: Cargo.toml  README.md
crates/riftgate-io-epoll/benches/: accept_echo.rs
crates/riftgate-io-epoll/src/: lib.rs  mio_io.rs
crates/riftgate-io-epoll/tests/: conformance.rs
crates/riftgate-io-uring/: Cargo.toml  README.md
crates/riftgate-io-uring/src/: lib.rs  uring.rs
crates/riftgate-io-uring/tests/: conformance.rs
crates/riftgate-mcp/: Cargo.toml  README.md
crates/riftgate-mcp/src/: allowlist.rs  attestation.rs  audit.rs  dryrun.rs  lib.rs  parser.rs
crates/riftgate-mcp/tests/: wal_audit.rs
crates/riftgate-obs/: Cargo.toml  README.md
crates/riftgate-obs-bpf/: Cargo.toml  README.md
crates/riftgate-obs-bpf/programs/: Cargo.toml
crates/riftgate-obs-bpf/programs/src/: lib.rs
crates/riftgate-obs-bpf/src/: lib.rs
crates/riftgate-obs/src/: bpf.rs  bus.rs  json_stdout_sink.rs  lib.rs  multi_sink.rs  otel_sink.rs  spans.rs
crates/riftgate-obs/src/gpu/: dcgm.rs  mod.rs  nvml.rs
crates/riftgate-obs/src/token_level/: mod.rs  reservoir.rs
crates/riftgate-obs/tests/: bpf_verifier.rs  bus_drop_on_full.rs  dcgm_scrape.rs  dcgm_scrape_failure.rs  multi_sink.rs  otel_smoke.rs  span_name_uniqueness.rs
crates/riftgate-operator/: Cargo.toml  README.md
crates/riftgate-operator/src/: crds.rs  lib.rs  main.rs  reconciler.rs  render.rs
crates/riftgate-operator/tests/: smoke_operator.rs
crates/riftgate-parser/: Cargo.toml  README.md
crates/riftgate-parser/benches/: http1.rs  sse.rs
crates/riftgate-parser/fuzz/: Cargo.toml
crates/riftgate-parser/fuzz/fuzz_targets/: http1_request.rs  sse_stream.rs
crates/riftgate-parser/src/: http1.rs  lib.rs  sse.rs
crates/riftgate-parser/tests/: http1_corpus.rs  proptest_parser.rs  sse_boundary.rs
crates/riftgate-replay/: Cargo.toml  README.md
crates/riftgate-replay/benches/: wal.rs
crates/riftgate-replay/fuzz/: Cargo.toml
crates/riftgate-replay/fuzz/fuzz_targets/: fuzz_wal_frame.rs
crates/riftgate-replay/src/: file_wal.rs  frame.rs  lib.rs
crates/riftgate-router/: Cargo.toml  README.md
crates/riftgate-router/benches/: routing.rs
crates/riftgate-router/src/: circuit.rs  constant.rs  hedged.rs  kv_aware.rs  lib.rs  round_robin.rs  weighted.rs
crates/riftgate-router/tests/: fairness.rs
crates/riftgate/benches/: end_to_end.rs  scheduler.rs
crates/riftgate/src/: bootstrap.rs  error.rs  health.rs  lib.rs  main.rs  mcp.rs  proxy.rs  scheduler.rs  server.rs  shutdown.rs  signals.rs  upstream.rs
crates/riftgate/tests/: e2e.rs
docs/: 00-vision.md  02-mvp-roadmap.md  02a-v0.0-retrospective.md  02b-v0.1-retrospective.md  02c-v0.2-retrospective.md  02d-v0.3-retrospective.md  02e-v0.4-retrospective.md  02f-v0.5-retrospective.md  07-operator-handbook.md  08-glossary.md  09-troubleshooting.md  SUMMARY.md
docs/01-requirements/: README.md  functional.md  non-functional.md  personas.md
docs/03-architecture/: control-plane.md  data-plane.md  extension-plane.md  hld.md  observability-plane.md
docs/04-design/: README.md  lld-allocator.md  lld-filter-chain.md  lld-io-runtime.md  lld-mcp-capability.md  lld-observability.md  lld-parsing.md  lld-rate-limiter.md  lld-routing.md  lld-scheduling.md  lld-storage.md  lld-timers.md
docs/05-options/: 001-io-model.md  002-async-runtime.md  003-concurrency-model.md  004-request-queue.md  005-allocator.md  006-timer-subsystem.md  007-protocol-parser.md  008-stream-framing.md  009-request-log.md  010-routing-strategy.md  011-circuit-breaker.md  012-backpressure.md  013-observability-sink.md  014-ebpf-integration.md  015-config-model.md  016-extension-mechanism.md  017-multitenancy.md  018-deployment.md  019-replay-eval.md  021-rate-limiting.md  023-token-bucket-parameters.md  024-stream-cancellation.md  025-v03-routing-strategies.md  026-mcp-orchestration.md  027-token-level-metrics.md  028-gpu-pressure-correlation.md  README.md  _template.md
docs/06-adrs/: 0001-rust-not-go-or-zig.md  0002-start-on-epoll.md  0003-tokio-multithread-default.md  0004-per-shard-default-stealing-opt-in.md  0005-sharded-mpmc-queue.md  0006-bump-arena-plus-system-malloc.md  0007-handrolled-fsm-parser.md  0008-sse-default-grpc-future.md  0009-rate-limiter-trait-in-proc-only.md  0010-binary-heap-timers-v01-hierarchical-wheel-v02.md  0011-otel-default-sink-multisink-fanout.md  0012-static-toml-env-override-v01.md  0013-append-only-file-wal.md  0014-weighted-random-router.md  0015-mcp-extension-plane-broker.md  0016-three-state-circuit-breaker.md  0017-drop-newest-503-backpressure.md  0018-token-bucket-parameters.md  0019-wasm-extension-mechanism.md  (+13 more)
examples/: README.md
lima/: riftgate.yaml
scripts/: build-bpf-objects  cargow  check-bpf-toolchain  render-cargo-config  stage-bpf-objects
(+12 files in other folders)
