[package]
name         = "riftgate-config"
description  = "Riftgate configuration: typed schema (serde + toml), env-variable override layer, fail-loudly validation, and a re-runnable loader for the v0.2/v0.3 hot-reload path."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
authors      = { workspace = true }
readme       = "README.md"
keywords     = ["riftgate", "config", "toml", "twelve-factor"]
categories   = ["config"]

[dependencies]
serde     = { workspace = true }
toml      = { workspace = true }
arc-swap  = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
tempfile   = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
