[package]
name         = "riftgate-filter"
description  = "Riftgate v0.3 filter chain executor and the frozen riftgate:filter/v1 component-model ABI host. Native FilterChain over the riftgate-core Filter trait + scaffold WasmFilter behind the `wasm` feature."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
authors      = { workspace = true }
readme       = "README.md"
keywords     = ["riftgate", "filter", "extension", "wasm", "component-model"]
categories   = ["network-programming"]

[features]
# Default ships the native `FilterChain` executor over `Vec<Arc<dyn Filter>>`.
# The `wasm` feature enables the production `WasmFilter` implementation
# backed by wasmtime + the frozen `riftgate:filter/v1` Component Model ABI
# per [ADR 0019](../../docs/06-adrs/0019-wasm-extension-mechanism.md).
default = []
wasm    = ["dep:wasmtime", "dep:parking_lot"]

[dependencies]
riftgate-core = { path = "../riftgate-core" }
tracing       = { workspace = true }
wasmtime      = { version = "31", optional = true, default-features = false, features = ["component-model", "wat", "runtime", "cranelift", "pooling-allocator"] }
parking_lot   = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
