[package]
name         = "riftgate-io-epoll"
description  = "Riftgate AsyncIO impl backed by mio (epoll on Linux, kqueue on macOS/BSD)."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
authors      = { workspace = true }
readme       = "README.md"
keywords     = ["riftgate", "epoll", "kqueue", "async", "mio"]
categories   = ["network-programming", "asynchronous"]

[dependencies]
riftgate-core = { path = "../riftgate-core" }
mio           = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile  = { workspace = true }

[[bench]]
name    = "accept_echo"
harness = false

[lints]
workspace = true
