[package]
name         = "riftgate-io-uring"
description  = "Riftgate AsyncIO impl backed by io_uring (Linux 5.10+, opt-in)."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
authors      = { workspace = true }
readme       = "README.md"
keywords     = ["riftgate", "io_uring", "linux", "async"]
categories   = ["network-programming", "asynchronous"]

[features]
default  = []
# Opt-in feature that enables the real io_uring-backed `UringIO`. Without
# this feature (or off-Linux) the crate compiles to an empty library so the
# workspace builds on macOS and Windows hosts.
io-uring = ["dep:io-uring"]

[dependencies]
riftgate-core = { path = "../riftgate-core" }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { workspace = true, optional = true }

# The io_uring `SubmissionQueue::push` API is `unsafe` by design (the caller
# must keep the submission entry alive until the kernel consumes it); we
# accept that locally with a justifying comment in the submission site, so
# this crate opts out of the workspace-level `#![deny(unsafe_code)]`.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
