[package]
name         = "riftgate-mcp"
description  = "MCP capability broker for Riftgate: JSON-RPC parser, per-tenant allowlist, WAL-backed audit, HMAC attestation."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
authors      = { workspace = true }
readme       = "README.md"
keywords     = ["riftgate", "mcp", "capability", "gateway", "broker"]
categories   = ["network-programming", "authentication"]

[lints]
workspace = true

[dependencies]
riftgate-core = { path = "../riftgate-core" }

serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
hmac        = { workspace = true }
sha2        = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
