[package]
name         = "riftgate-obs"
description  = "Riftgate observability bus and sinks. Bounded MPSC with drop-on-full + OtelSink (OTLP/gRPC) + JsonStdoutSink + MultiSink, behind the ObservabilitySink trait from riftgate-core."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
authors      = { workspace = true }
readme       = "README.md"
keywords     = ["riftgate", "observability", "opentelemetry", "otlp"]
categories   = ["development-tools::debugging", "asynchronous"]

[features]
default  = []
bpf      = ["dep:aya", "dep:riftgate-obs-bpf", "riftgate-obs-bpf/bpf"]
gpu-nvml = ["dep:nvml-wrapper"]

[dependencies]
riftgate-core      = { path = "../riftgate-core" }
riftgate-obs-bpf   = { path = "../riftgate-obs-bpf", optional = true }
crossbeam-channel  = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
opentelemetry      = { workspace = true }
opentelemetry_sdk  = { workspace = true }
opentelemetry-otlp = { workspace = true }
hdrhistogram     = { workspace = true }
rand             = { workspace = true }

dashmap          = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
aya          = { workspace = true, optional = true }
nvml-wrapper = { workspace = true, optional = true }

[lints]
workspace = true
