[package]
name         = "riftgate-replay"
description  = "Riftgate v0.2 append-only request log: FileWal (per-shard segment files, group-commit fdatasync) behind the WAL trait from riftgate-core."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
authors      = { workspace = true }
readme       = "README.md"
keywords     = ["riftgate", "wal", "log", "replay"]
categories   = ["filesystem", "asynchronous"]

[dependencies]
riftgate-core = { path = "../riftgate-core" }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
