[package]
name         = "riftgate-replay"
description  = "Riftgate v0.2 append-only request log: FileWal (per-shard segment files, group-commit fdatasync) behind the WAL trait from riftgate-core."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
authors      = { workspace = true }
readme       = "README.md"
keywords     = ["riftgate", "wal", "log", "replay"]
categories   = ["filesystem", "asynchronous"]

[[bin]]
name = "riftgate-replay"
path = "src/bin/riftgate-replay.rs"

[dependencies]
riftgate-core = { path = "../riftgate-core" }
clap          = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
toml          = { workspace = true }
thiserror     = { workspace = true }
base64        = "0.22"

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name    = "wal"
harness = false

[lints]
workspace = true
